# Biomechanics

./: .gitignore  BIOMECH_TUTOR_CODEX_INSTRUCTIONS_UPDATED.md  BIOMECH_TUTOR_PROJECT_PROPOSAL_UPDATED.md  DESIGN_CONTRACT.md  PROJECT_PROPOSAL.md  README.md  pyproject.toml
Activites/: Activity Biceps Curl2d.pptx  Activity Foot - upside down seesawc.pptx  Activity Which muscle when lower leg knee partially done.pptx  Activity overhead extension 3.pptx
Activities/: Activity Head as seesawb.pptx  Activity Leg Extension3.pptx  Activity Leg press 3b.pptx  Squat with barbell Jc.pptx
biomech_tutor/: __init__.py  layers.py
biomech_tutor/anatomy/: __init__.py  attachment_regions.py  body_part_systems.py  bones.py  joints.py  models.py  muscles.py
biomech_tutor/core/: __init__.py  frames.py  geometry.py  quantities.py  signs.py  transforms.py  units.py
biomech_tutor/demo/: __init__.py  elbow_biceps_curl_2d.py  knee_lower_leg_jump_dynamics.py
biomech_tutor/diagnostics/: __init__.py  adapter.py  failures.py  hints.py  message_catalog.py  rubrics.py
biomech_tutor/instructor/: __init__.py  authoring_schema.py  external_references.py  validation.py
biomech_tutor/learner/: __init__.py  actions.py  diagrams.py  equation_inputs.py  graph_inputs.py  submissions.py
biomech_tutor/physics/: __init__.py  constraints.py  forces.py  lever_arms.py  lines_of_action.py  rotational_dynamics.py  statics.py  torques.py  wrenches.py
biomech_tutor/student_projection/: __init__.py  feedback_language.py  labels.py  projection.py  source_aliases.py
biomech_tutor/tasks/: __init__.py  (+4 more)
(+29 files in other folders)
