[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "biomech-tutor"
version = "0.1.0"
description = "A Python-first biomechanics diagnostic tutor."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["biomech_tutor*"]

[tool.pytest.ini_options]
testpaths = ["biomech_tutor/tests"]
